2008-06-14
	* 2.1 released,	Highliights include:
		* Static arrays in player interfaces replaced with dynamic arrays
		* Relicensed all but drivers and utils to LGPL
		* Clean ups of interfaces and client libraries
		* Many bug fixes and new drivers
		
		The 2.0 -> 2.1 upgrade guide is available on the Player wiki
			http://playerstage.sourceforge.net/wiki/Player_2.1_Upgrade
	
2008-04-16
	* 2.1.0rc2 released

2007-12-13 12:36  gerkey

	* COPYING.lib (1.2), Makefile.am (1.42): added lgpl

2007-12-13 12:31  gerkey

	* config/Makefile.am (1.20): cleaned up .cfg installation

2007-12-13 12:23  gerkey

	* config/Makefile.am (1.19), config/erratic.cfg (1.2),
	  doc/player.dox (1.54), doc/player.txt (1.11),
	  libplayercore/interfaces/004_position2d.def (1.2),
	  libplayersd/playersd.h (1.13),
	  server/drivers/mixed/erratic/erratic.cc (1.20),
	  server/drivers/mixed/erratic/erratic.h (1.11),
	  server/drivers/mixed/erratic/motorpacket.cc (1.3),
	  server/drivers/mixed/erratic/motorpacket.h (1.3),
	  server/drivers/mixed/erratic/robot_params.cc (1.4),
	  server/drivers/mixed/erratic/robot_params.h (1.6),
	  server/drivers/mixed/erratic/sip.h (1.3): updated .cfg files and
	  docs

2007-12-12 14:21  gerkey

	* server/drivers/: audiodsp/.cvsignore (1.3), audiomixer/.cvsignore
	  (1.3), waveform/.cvsignore (1.3): added some ignorance

2007-12-12 11:15  thjc

	* server/drivers/camera/1394/camera1394.cc (1.37): applied patch [
	  1849475 ] camera1394 DMA bus cleanup patch for libdc1394 v2.0

2007-12-11 10:50  gerkey

	* libplayertcp/playertcp.cc (1.74): applied patch 1821188

2007-12-11 10:48  gerkey

	* acinclude.m4 (1.149): applied patch 1843524

2007-12-11 10:25  gerkey

	* client_libs/libplayerc/dev_fiducial.c (1.20): applied patch
	  1844037

2007-12-11 10:23  gerkey

	* server/drivers/camera/compress/cameracompress.cc (1.20): applied
	  patch 1848685

2007-12-11 08:46  gerkey

	* libplayertcp/: playertcp.cc (1.73), playerudp.cc (1.12): took out
	  recursive mutex code
